package com.browseengine.bobo.protobuf;

option java_package = "com.browseengine.bobo.protobuf";
option java_outer_classname = "BrowseRequestBPO";

option optimize_for = SPEED;

message Property{
  required string key = 1;
  optional string val = 2;
}

message Selection {
  required string name = 1;
  repeated string values = 2;
  repeated string notValues = 3;
  enum Operation {
    OR = 0;
    AND = 1;
  }
  optional Operation op = 4 [default = OR];
  repeated Property props = 5; 
}

message Sort
{
  optional string field = 1;
  optional bool reverse = 2;
  optional uint32 type = 3;
}

message FacetSpec
{
  required string name = 1;
  optional uint32 max = 2;
  optional bool expand = 3;
  optional uint32 minCount = 4;
  enum SortSpec
  {
    ValueAsc = 0;
    HitsDesc = 1;
  }
  optional SortSpec orderBy = 5 [default = HitsDesc];
}
	
message Request{
  repeated Selection selections = 1;
  optional uint32 offset = 2;
  optional uint32 count = 3;
  repeated Sort sort = 4;
  repeated FacetSpec facetSpecs = 5;
  optional string query = 6;
}
